[gd_scene load_steps=2 format=3 uid="uid://m8hjh545pcjb"]

[ext_resource type="Script" path="res://scenes/dialogs/create_group_dialog_script.gd" id="1_pv2bt"]

[node name="CreateGroupDialog" type="ConfirmationDialog"]
auto_translate_mode = 1
title = "Create Group"
initial_position = 1
size = Vector2i(400, 242)
visible = true
ok_button_text = "Create"
script = ExtResource("1_pv2bt")

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 193.0

[node name="NameContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/NameContainer"]
layout_mode = 2
text = "Name:"

[node name="NameLnEdt" type="LineEdit" parent="MainContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../../DescTxtEdt")
placeholder_text = "Name"

[node name="DescTxtEdt" type="TextEdit" parent="MainContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
focus_previous = NodePath("../NameContainer/NameLnEdt")
placeholder_text = "Description"
